# remesher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_suite.py
include/: mesh.h  remesher.h
source/: remesher_main.cpp
